--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: "EB Garamond", serif;
+    /* border: 1px solid red; */
 }
 
 html , body{
@@ -30,6 +31,7 @@ nav{
     height: 10vh;
     padding: 0vw 10vw;
     z-index: 99;
+    background-color: rgba(67, 20, 3, 0.7);
 }
 
 nav a, i{
@@ -149,7 +151,8 @@ nav i{
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 90vhvh;
+    height: 90vh;
+    overflow: hidden;
 }
 .product img{
     width: 100%;
